fixed text align

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -68,6 +68,10 @@
       margin-top: 20px;
     }
   }
+
+  @media (min-width: @desktop-width) {
+    text-align: start;
+  }
 }
 
 .contacts__map {
